--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -48,24 +48,22 @@
 
 \include{introduction}
 \include{rbffd_method}
-%\include{ordering_and_preconditioning}
+\include{ordering_and_preconditioning}
 \include{gpu_solver}
-%\include{distributed_solver}
+\include{distributed_solver}
 \include{multigpu_rbffd}
 %
-%\include{explicit_pde_solutions}
-%\include{implicit_pde_solutions}
+\include{explicit_pde_solutions}
+\include{implicit_pde_solutions}
 \include{publications}
 %
 \include{conclusions}
 %
 \appendix
-%\include{rbffd_avoid_pole_singularities}
-%\include{rbffd_weights_on_sphere}
+\include{rbffd_avoid_pole_singularities}
+\include{rbffd_weights_on_sphere}
 \include{cut_from_distributed_solver}
-%\include{keeneland_benchmarks}
-%\include{spear_benchmarks}
-%\include{hardware}
+\include{keeneland_benchmarks}
 
 %\include{stokes_revisited}
 
