--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -538,6 +538,7 @@ This approach decomposes the problem into smaller and more manageable parts. How
 
 
 \section{Recent Advances in Conditioning}
+\label{sec:stable_methods}
 
 The most limiting factor in the success of RBF methods has not been the complexity of the methods, nor the task of approximating derivatives. Rather, it is the support parameter, $\epsilon$, and the dilemma one faces in the \emph{Uncertainty Relation} \cite{Schaback1995}. Recall that as $\epsilon \rightarrow 0$, ill-conditioning of the RBF interpolation matrices increases, but so too does the approximation accuracy---that is, assuming a stable solution can be found. Likewise, as the number of collocation points increases, the range of $\epsilon$ for which the linear system has acceptable conditioning narrows. In \cite{Fornberg2011a}, the authors observe that much of the literature on RBF methods seek to find optimal values of the support parameter $\epsilon$ for the highest accuracy in applications. Occasionally the optimal values lie within a range of acceptable conditioning to solve the linear systems directly (a.k.a. RBF-Direct solutions). More often, one must compromise between the accuracy loss for large $\epsilon$ and accuracy loss in RBF-Direct solutions due to lower values of $\epsilon$. Many attempts to express the optimal $\epsilon$ as a function of problem size have also been thwarted as the impact on the optimal $\epsilon$ values in the face of small node perturbations is still not fully understood. This makes refinements a challenge to manage. 
 
@@ -558,7 +559,9 @@ method uses a truncated expansion of RBFs in terms of spherical harmonics or Che
 
 Between Contour-Pad\'{e} and RBF-QR, global RBF methods overcame many conditioning issues for small to mid-sized problems. The lack of support for large problem sizes is discouraging, but it leads to an argument in favor of local methods like RBF-FD, which decrease the problem size to fit nicely within the scope of stable methods. % To our knowledge, no application of a local method has required more than a few hundred nodes per local solution. 
 
-Most recently, Fornberg et al. \cite{Fornberg2012} introduced a new method called RBF-GA, which performs a similar change of basis as RBF-QR, but the method avoids truncated infinite expansions by expressing the new basis functions in terms of an incomplete Gamma function. Unlike RBF-QR, this method is limited to Gaussian basis functions only. Benchmarks provided in \cite{Fornberg2012} rank stable methods for RBFs from fastest to slowest as: RBF-Direct, RBF-GA, and then RBF-QR. RBF-GA is also effective for a small number of nodes: a few hundred in 2D, and at least 500 in 3D. Unlike RBF-QR, which performs a change of basis on the interpolating matrix only, the RBF-GA method requires a complicated change of basis for the RHS as well \cite{Fornberg2012}.
+Most recently, Fornberg et al. \cite{Fornberg2012} introduced a new method called RBF-GA, which performs a similar change of basis as RBF-QR, but the method avoids truncated infinite expansions by expressing the new basis functions in terms of an incomplete Gamma function. Unlike RBF-QR, this method is limited to Gaussian basis functions only. Like RBF-QR, RBF-GA is also effective only for a small number of nodes: a few hundred in 2D, and at least 500 in 3D. Unlike RBF-QR, which performs a change of basis on the interpolating matrix only, the RBF-GA method requires a complicated change of basis for the RHS as well \cite{Fornberg2012}
+
+Benchmarks provided in \cite{Fornberg2012} rank the stable methods for RBFs from fastest to slowest as: RBF-Direct, RBF-GA, and then RBF-QR. Keeping perspective on run-times, the authors note that RBF-GA is roughly 10x slower than RBF-Direct and RBF-QR is another 2x-4x slower than RBF-GA \cite{Fornberg2012}.
 
 
 \part{RBF-FD for HPC Environments}
@@ -1095,20 +1098,37 @@ Figure~\ref{fig:scvt_nodes} provides an example SCVT grid with N=100,000 nodes. 
 %First, the method is not infallible; it faces similar conditioning issues as global/compact RBF method in that the success of the method depends on the choice of support parameter, $\epsilon$. Second, proper choice of $\epsilon$ varies based on the underlying node distribution, as well as the generated stencils. Third, the complexity of the method is low, but there are a few 
 
 If solving for RBF-Direct weights directly (i.e., inverting Equation~\ref{eq:rbffd_weight_system} directly), one must balance the choice of $\epsilon$ against ill-conditioning to achieve a reasonable accuracy for the weights. Numerous attempts exist in literature to provide ``good" functions for $\epsilon$ based on node spacing ($h$), stencil size ($n$), and total number of nodes in the domain ($N$). 
-No foolproof method exists for RBF-Direct---the ``optimal" (in most cases this reads: ``most acceptable") value of $\epsilon$ depends on the node distribution and varies by application. That said, parameter sweeps on large problems are expensive, so finding the right function for $\epsilon$ 
+
+Unfortunately, no foolproof method exists for RBF-Direct---the ``optimal" (in most cases this reads: ``most acceptable") value of $\epsilon$ depends on the node distribution and varies by application. Parameter sweeps to characterize the behavior of $\epsilon$ on large problems can be prohibitively expensive in terms of time and/or money. Ultimately, stable methods for obtaining weights (see \S~\ref{sec:stable_methods}) are really necessary for general large-scale applications, even if such methods are 10x--40x slower than RBF-Direct \cite{Fornberg2012}. 
 
 %GORDON: On large problems that are expensive, how is epsilon chosen? You might not have the $$ to do long, expensive test runs. 
 % Where is kappabar = 1/N … first defined? Same without the bar. Defined where?
 % Use computer font for cond()
 
-This work utilizes a moderately reliable method, proposed in \cite{FlyerLehto11}, for choosing $\epsilon$ as a function of the grid resolution, $N$, and the desired mean condition number for Equation~\ref{eq:rbffd_weight_system}, $\bar{\kappa}_A = \frac{1}{N} \sum_{i=1}^N(\kappa_A)$. %Here $\kappa_A$ is the condition number of the interpolation matrix from Equation~\ref{eq:rbffd_weight_system}. 
+This work utilizes a moderately reliable method, proposed in \cite{FlyerLehto11}, to choose $\epsilon$ as a function of the grid resolution, $N$. The method performs a parameter sweep in $\epsilon$ and $N$ to generate a set of mean condition numbers, $\bar{\kappa}_A$, defined as:
+\begin{align*}
+\bar{\kappa}_A = \frac{1}{N} \sum_{i=1}^N(\kappa_A)_i
+\end{align*}
+where $(\kappa_A)_i$ is the condition number for the matrix, $A_i$, assembled by Equation~\ref{eq:rbffd_weight_system} for the $i$-th stencil in the domain. MATLAB's \textsc{cond} command computes the 2-norm condition number defined as:
+\begin{align*}
+(\kappa_A)_i = ||A_i^{-1}||_{2}\cdot||A_i||_{2}. %= \frac{\sigma_{\max}(A)}{\sigma_{\min}(A)}
+\end{align*} 
 
-The tiles of Figure~\ref{fig:epsilon_contours} illustrate a number of contours generated in MATLAB. Each contour is numbered according to $\log_{10}\bar{\kappa}_A$. Data was generated by uniformly sampling parameter spaces on $\epsilon$ and $\sqrt{N}$ for the MD node-sets. For each $\sqrt{N} = \{40, ..., 100\}$, in steps of 10, the code makes a sweep through $\epsilon = \{1, ..., 10\}$ in steps of 0.5 and assembles $N$ RBF-FD interpolation matrices. A call to MATLAB's ``cond()" routine evaluates $\kappa_A$ for each matrix. The resulting values of $\bar{\kappa}_A$ produce remarkably linear contours, with slopes that fan out from the $\epsilon$ axis. Note that $\kappa_A$ depends on the stencil size, $n$, as evidenced by shifting contour fans for $n=20, 40, 60, 80,$ and $100$. The simultaneous increase in slope and decreasing separation between contours leaves little ``wiggle" room in guessing $\epsilon$ under RBF-Direct. 
+ %Here $\kappa_A$ is the condition number of the interpolation matrix from Equation~\ref{eq:rbffd_weight_system}. 
 
-Regression slope and intercept parameters ($c_1$ and $c_2$) are superimposed in Figure~\ref{fig:epsilon_contours} to aid others in choosing $\epsilon$ in new applications. These parameters reproduce contours as $\epsilon(\sqrt{N}) = c_1 \sqrt{N} - c_2$.  The authors of \cite{FlyerLehto11} find condition numbers on the order $10^{10}$ to $10^{12}$ to function well for competitive accuracy compared to other methods in the literature; the method begins to degrade on large grids (i.e., $N > 1e5$). Similar observations are made in Chapter~\ref{chap:applications}. 
+The tiles of Figure~\ref{fig:epsilon_contours} illustrate a number of contours generated in MATLAB. Each contour is numbered according to $\log_{10}\bar{\kappa}_A$. Data was generated by uniformly sampling parameter spaces on $\epsilon$ and $\sqrt{N}$ for the MD node-sets. For each $\sqrt{N} = \{40, ..., 100\}$, in steps of 10, the code makes a sweep through $\epsilon = \{1, ..., 10\}$ in steps of 0.5 and assembles $N$ RBF-FD interpolation matrices. The \textsc{cond} command evaluates $(\kappa_A)_i$ for each matrix. At the end of the sweep, the 2-D array of mean condition numbers are passed through the MATLAB \textsc{contour} command to identify and trace the line segments.
+
+The resulting values of $\bar{\kappa}_A$ produce remarkably linear contours, with slopes that fan out from the $\epsilon$ axis. Note that the $(\kappa_A)_i$ depend on the stencil size, $n$, as evidenced by shifting contour fans for $n=20, 40, 60, 80,$ and $100$. For large $n$ we observe that the simultaneous increase in slope and decreasing separation between contours leaves little ``wiggle" room in guessing $\epsilon$ under RBF-Direct. 
+
+As $N$ grows larger, we assume that the condition number continues linearly. The cost of computing $\bar{\kappa}_A$ balloons as data points are added to the contour plot so values of $N$ are not exhaustively tested. Also, be advised that the node distributions impact conditioning, so switching node distributions (e.g., from MD-nodes to a regular grid) would require constructing a new set of contours. 
+
+%TODO: How do plots change if nodes are uniform in a cube or if 2D, on a square? What is the effect of boundaries? Are there any? Boundaries (like for FD), would reduce the Courant number since points would probably be closer to each other.
+
+
+Regression slope and intercept parameters ($c_1$ and $c_2$) are superimposed in Figure~\ref{fig:epsilon_contours} to aid others in choosing $\epsilon$ in new applications. These parameters reproduce contours as $\epsilon(\sqrt{N}) = c_1 \sqrt{N} - c_2$.  The authors of \cite{FlyerLehto11} find condition numbers on the order $10^{10}$ to $10^{12}$ to function well for competitive accuracy compared to other methods in the literature; the method begins to degrade on large grids (i.e., $N > 10^5$). Similar observations are made in Chapter~\ref{chap:applications}. 
 
 %In light of the objective to scale RBF-FD to large problem sizes fitting for HPC, the observations in \cite{FlyerLehto11} and Chapter~\ref{chap:applications} regarding resolution limits 
-Stable weight algorithms like Contour-Pad\'{e} \cite{Wright2003}, RBF-QR \cite{Fornberg2007, Fornberg2011a, Davydov2011}, and RBF-GA \cite{Fornberg2012} can allow RBF-FD to scale beyond the limits of RBF-Direct and will be included in future investigation. 
+Stable weight algorithms like Contour-Pad\'{e} \cite{Wright2003}, RBF-QR \cite{Fornberg2007, Fornberg2011a, Davydov2011}, and RBF-GA \cite{Fornberg2012} can allow RBF-FD to scale beyond the limits of RBF-Direct and will be included in a future investigation. 
 
 
 \begin{figure}[htbp]
